@@ -141,7 +141,7 @@ INDEX		|2		|screenid
 TABLE|drules|druleid|ZBX_DATA
 FIELD		|druleid	|t_id		|	|NOT NULL	|0
 FIELD		|proxy_hostid	|t_id		|	|NULL		|0			|1|hosts	|hostid		|RESTRICT
-FIELD		|name		|t_varchar(255)	|''	|NOT NULL	|0
+FIELD		|name		|t_varchar(255)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|iprange	|t_varchar(255)	|''	|NOT NULL	|ZBX_PROXY
 FIELD		|delay		|t_integer	|'3600'	|NOT NULL	|ZBX_PROXY
 FIELD		|nextcheck	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
